tests/neg/parse_error.scala
class Main {
  val x = y
  val y = x

  def main = {
    0
  }
}